<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>desktop</artifactId>
        <groupId>com.zondy.mapgis</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>mapgis_ribbonapploader</artifactId>

    <dependencies>
        <dependency>
            <groupId>com.zondy.mapgis</groupId>
            <artifactId>mapgis_ribbonfx</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/../bin/mapgis_ribbonfx.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.zondy.mapgis</groupId>
            <artifactId>mapgis_dockfx</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/../bin/mapgis_dockfx.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.zondy.mapgis</groupId>
            <artifactId>mapgis_ui_controls</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/../bin/mapgis_ui_controls.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.zondy.mapgis</groupId>
            <artifactId>mapgis_pluginengine</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/../bin/mapgis_pluginengine.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>2.1.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jaxen</groupId>
            <artifactId>jaxen</artifactId>
            <version>1.2.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${pom.name}</finalName>
        <plugins>
            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
<!--                    <compilerArgument>-->
<!--                        <arg>-Djava.ext.dirs=../bin/</arg>-->
<!--                    </compilerArgument>-->
                </configuration>
            </plugin>
            <!-- 打包插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <!-- 指定打包输出路径 -->
                    <outputDirectory>${pom.basedir}/../bin</outputDirectory>
                    <!-- MainClass in mainfest make a executable jar -->
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.zondy.mapgis.ribbonapploader.MainForm</mainClass>
                            <classpathPrefix>mapgis_ribbonapploader.jar mapgis_pluginengine.jar mapgis_ui_controls.jar mapgis_dockfx.jar mapgis_ribbonfx.jar mapgis_geoanalysis.jar mapgis_geomap.jar dcs-sys-api.jar mapgis_geodatabase.jar mapgis_geoobjects.jar libs/checker-qual-2.11.1.jar libs/controlsfx-11.0.1.jar libs/crimson-1.1.3.jar libs/dom4j-2.1.3.jar libs/error_prone_annotations-2.3.4.jar libs/failureaccess-1.0.1.jar libs/guava-29.0-jre.jar libs/j2objc-annotations-1.3.jar libs/javafx-base-11.0.2-win.jar libs/javafx-base-11.0.2.jar libs/javafx-controls-11.0.2-win.jar libs/javafx-controls-11.0.2.jar libs/javafx-graphics-11.0.2-win.jar libs/javafx-graphics-11.0.2.jar libs/javafx-media-11.0.2-win.jar libs/javafx-media-11.0.2.jar libs/javafx-swing-11.0.2-win.jar libs/javafx-swing-11.0.2.jar libs/javafx-web-11.0.2-win.jar libs/javafx-web-11.0.2.jar libs/jaxen-1.2.0.jar libs/jsr305-3.0.2.jar libs/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar libs/log4j-1.2.17.jar libs/log4j-api-2.13.3.jar libs/log4j-core-2.13.3.jar libs/slf4j-api-1.7.30.jar libs/slf4j-log4j12-1.7.30.jar plugin/mapgis_workspace_plugin.jar plugin/mapgis_gdbmanager_plugin.jar plugin/mapgis_dataconvert_plugin.jar plugin/mapgis_mapeditor_plugin.jar plugin/mapgis_rastereditor_plugin.jar</classpathPrefix>
                        </manifest>
                        <manifestEntries>
                            <Build-Time>${maven.build.timestamp}</Build-Time>
                            <Build-Host> </Build-Host>
                            <Build-User>${user.name}</Build-User>
                            <Build-Maven>Maven $\{maven.version\}</Build-Maven>
                            <Build-Java>${java.version}</Build-Java>
                            <Build-OS>${os.name}</Build-OS>
                            <Build-Label>${pom.version}</Build-Label>
                            <Build-Path>${basedir}</Build-Path>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <!-- 依赖项插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${pom.basedir}/../bin/libs</outputDirectory>
                            <excludeScope>system</excludeScope>
                            <excludeTransitive>false</excludeTransitive>
                            <includeScope>provided</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${basedir}/src/main/java</directory>
                <includes>
                    <include>**/*.fxml</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
        </resources>
    </build>

</project>